--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,5 +1,44 @@
 2019-10-29  Alan Coon  <alancoon@apple.com>
 
+        Cherry-pick r251148. rdar://problem/56598349
+
+    [WebAuthn] Write more tests for _WKWebAuthenticationPanel
+    https://bugs.webkit.org/show_bug.cgi?id=202565
+    <rdar://problem/55974128>
+    
+    Reviewed by Brent Fulgham.
+    
+    * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
+    * TestWebKitAPI/Tests/WebKitCocoa/_WKWebAuthenticationPanel.mm:
+    (-[TestWebAuthenticationPanelDelegate panel:dismissWebAuthenticationPanelWithResult:]):
+    (-[TestWebAuthenticationPanelUIDelegate init]):
+    (-[TestWebAuthenticationPanelUIDelegate webView:runWebAuthenticationPanel:initiatedByFrame:completionHandler:]):
+    (TestWebKitAPI::TEST):
+    * TestWebKitAPI/Tests/WebKitCocoa/web-authentication-get-assertion-hid.html: Added.
+    * TestWebKitAPI/Tests/WebKitCocoa/web-authentication-get-assertion-nfc.html: Added.
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251148 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-10-15  Jiewen Tan  <jiewen_tan@apple.com>
+
+            [WebAuthn] Write more tests for _WKWebAuthenticationPanel
+            https://bugs.webkit.org/show_bug.cgi?id=202565
+            <rdar://problem/55974128>
+
+            Reviewed by Brent Fulgham.
+
+            * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
+            * TestWebKitAPI/Tests/WebKitCocoa/_WKWebAuthenticationPanel.mm:
+            (-[TestWebAuthenticationPanelDelegate panel:dismissWebAuthenticationPanelWithResult:]):
+            (-[TestWebAuthenticationPanelUIDelegate init]):
+            (-[TestWebAuthenticationPanelUIDelegate webView:runWebAuthenticationPanel:initiatedByFrame:completionHandler:]):
+            (TestWebKitAPI::TEST):
+            * TestWebKitAPI/Tests/WebKitCocoa/web-authentication-get-assertion-hid.html: Added.
+            * TestWebKitAPI/Tests/WebKitCocoa/web-authentication-get-assertion-nfc.html: Added.
+
+2019-10-29  Alan Coon  <alancoon@apple.com>
+
         Cherry-pick r250940. rdar://problem/56598350
 
     [WebAuthn] Move the mock testing entrance to Internals
