--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,5 +1,45 @@
 2019-10-29  Alan Coon  <alancoon@apple.com>
 
+        Cherry-pick r251154. rdar://problem/56715899
+
+    [WebAuthn] Rename -[WKUIDelegatePrivate webView:runWebAuthenticationPanel:initiatedByFrame:completionHandler:] to -[WKUIDelegatePrivate _webView:runWebAuthenticationPanel:initiatedByFrame:completionHandler:]
+    https://bugs.webkit.org/show_bug.cgi?id=202564
+    <rdar://problem/55974027>
+    
+    Reviewed by Brent Fulgham.
+    
+    Source/WebKit:
+    
+    Rename the SPI to a proper SPI style.
+    
+    * UIProcess/API/Cocoa/WKUIDelegatePrivate.h:
+    * UIProcess/Cocoa/UIDelegate.mm:
+    (WebKit::UIDelegate::setDelegate):
+    (WebKit::UIDelegate::UIClient::runWebAuthenticationPanel):
+    
+    Tools:
+    
+    * TestWebKitAPI/Tests/WebKitCocoa/_WKWebAuthenticationPanel.mm:
+    (-[TestWebAuthenticationPanelUIDelegate _webView:runWebAuthenticationPanel:initiatedByFrame:completionHandler:]):
+    (-[TestWebAuthenticationPanelUIDelegate webView:runWebAuthenticationPanel:initiatedByFrame:completionHandler:]): Deleted.
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251154 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-10-15  Jiewen Tan  <jiewen_tan@apple.com>
+
+            [WebAuthn] Rename -[WKUIDelegatePrivate webView:runWebAuthenticationPanel:initiatedByFrame:completionHandler:] to -[WKUIDelegatePrivate _webView:runWebAuthenticationPanel:initiatedByFrame:completionHandler:]
+            https://bugs.webkit.org/show_bug.cgi?id=202564
+            <rdar://problem/55974027>
+
+            Reviewed by Brent Fulgham.
+
+            * TestWebKitAPI/Tests/WebKitCocoa/_WKWebAuthenticationPanel.mm:
+            (-[TestWebAuthenticationPanelUIDelegate _webView:runWebAuthenticationPanel:initiatedByFrame:completionHandler:]):
+            (-[TestWebAuthenticationPanelUIDelegate webView:runWebAuthenticationPanel:initiatedByFrame:completionHandler:]): Deleted.
+
+2019-10-29  Alan Coon  <alancoon@apple.com>
+
         Cherry-pick r251148. rdar://problem/56598349
 
     [WebAuthn] Write more tests for _WKWebAuthenticationPanel
