--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,5 +1,83 @@
 2019-10-29  Alan Coon  <alancoon@apple.com>
 
+        Cherry-pick r251489. rdar://problem/56579665
+
+    [WebAuthn] Supply FrameInfo in -[WKUIDelegatePrivate _webView:runWebAuthenticationPanel:initiatedByFrame:completionHandler:]
+    https://bugs.webkit.org/show_bug.cgi?id=202563
+    <rdar://problem/55973968>
+    
+    Reviewed by Brent Fulgham.
+    
+    Source/WebCore:
+    
+    Covered by new test contents within existing tests.
+    
+    * Modules/webauthn/AuthenticatorCoordinator.cpp:
+    (WebCore::AuthenticatorCoordinator::create const):
+    (WebCore::AuthenticatorCoordinator::discoverFromExternalSource const):
+    * Modules/webauthn/AuthenticatorCoordinatorClient.h:
+    
+    Source/WebKit:
+    
+    This patch makes WKFrameInfo available to clients via the above SPI. To do so,
+    SecuirtyOrigin of the caller document is passed from WebContent Process.
+    
+    * UIProcess/API/APIUIClient.h:
+    (API::UIClient::runWebAuthenticationPanel):
+    * UIProcess/API/C/WKPage.cpp:
+    (WKPageSetPageUIClient):
+    * UIProcess/Cocoa/UIDelegate.h:
+    * UIProcess/Cocoa/UIDelegate.mm:
+    (WebKit::UIDelegate::UIClient::runWebAuthenticationPanel):
+    * UIProcess/WebAuthentication/AuthenticatorManager.cpp:
+    (WebKit::AuthenticatorManager::runPanel):
+    * UIProcess/WebAuthentication/WebAuthenticationRequestData.h:
+    * UIProcess/WebAuthentication/WebAuthenticatorCoordinatorProxy.cpp:
+    (WebKit::WebAuthenticatorCoordinatorProxy::makeCredential):
+    (WebKit::WebAuthenticatorCoordinatorProxy::getAssertion):
+    (WebKit::WebAuthenticatorCoordinatorProxy::handleRequest):
+    * UIProcess/WebAuthentication/WebAuthenticatorCoordinatorProxy.h:
+    * UIProcess/WebAuthentication/WebAuthenticatorCoordinatorProxy.messages.in:
+    * WebProcess/WebAuthentication/WebAuthenticatorCoordinator.cpp:
+    (WebKit::WebAuthenticatorCoordinator::makeCredential):
+    (WebKit::WebAuthenticatorCoordinator::getAssertion):
+    * WebProcess/WebAuthentication/WebAuthenticatorCoordinator.h:
+    
+    Tools:
+    
+    Adds new test contents into existing tests.
+    
+    * TestWebKitAPI/Tests/WebKitCocoa/_WKWebAuthenticationPanel.mm:
+    (-[TestWebAuthenticationPanelUIDelegate init]):
+    (-[TestWebAuthenticationPanelUIDelegate _webView:runWebAuthenticationPanel:initiatedByFrame:completionHandler:]):
+    (-[TestWebAuthenticationPanelUIDelegate frame]):
+    (TestWebKitAPI::TEST):
+    
+    LayoutTests:
+    
+    * http/wpt/webauthn/public-key-credential-get-success-hid.https.html:
+    Imporves the flakiness.
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251489 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-10-22  Jiewen Tan  <jiewen_tan@apple.com>
+
+            [WebAuthn] Supply FrameInfo in -[WKUIDelegatePrivate _webView:runWebAuthenticationPanel:initiatedByFrame:completionHandler:]
+            https://bugs.webkit.org/show_bug.cgi?id=202563
+            <rdar://problem/55973968>
+
+            Reviewed by Brent Fulgham.
+
+            Adds new test contents into existing tests.
+
+            * TestWebKitAPI/Tests/WebKitCocoa/_WKWebAuthenticationPanel.mm:
+            (-[TestWebAuthenticationPanelUIDelegate init]):
+            (-[TestWebAuthenticationPanelUIDelegate _webView:runWebAuthenticationPanel:initiatedByFrame:completionHandler:]):
+            (-[TestWebAuthenticationPanelUIDelegate frame]):
+            (TestWebKitAPI::TEST):
+
+2019-10-29  Alan Coon  <alancoon@apple.com>
+
         Cherry-pick r251295. rdar://problem/56579665
 
     [WebAuthn] Implement AuthenticatorCancel
