--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,85 @@
 2019-10-29  Alan Coon  <alancoon@apple.com>
 
+        Cherry-pick r251317. rdar://problem/56598357
+
+    [WebAuthn] Warn users when no credentials are found
+    https://bugs.webkit.org/show_bug.cgi?id=203147
+    <rdar://problem/55931123>
+    
+    Reviewed by Brent Fulgham.
+    
+    Source/WebKit:
+    
+    This patch returns _WKWebAuthenticationPanelUpdateNoCredentialsFound to client via
+    -[_WKWebAuthenticationPanelDelegate panel:updateWebAuthenticationPanel:] when either
+    CtapAuthenticator receives kCtap2ErrNoCredentials or U2fAuthenticator exhausts the
+    allow list.
+    
+    This patch also enhances CtapAuthenticator::tryDowngrade to check if the CTAP command
+    can be converted to U2F commands to ensure kCtap2ErrNoCredentials is returned if it
+    is the case. Otherwise, after downgrading, U2fAuthenticator will return NotSupportedError
+    given it can't convert the commands.
+    
+    * UIProcess/API/APIUIClient.h:
+    * UIProcess/API/APIWebAuthenticationPanelClient.h:
+    (API::WebAuthenticationPanelClient::updatePanel const):
+    * UIProcess/WebAuthentication/Authenticator.h:
+    * UIProcess/WebAuthentication/AuthenticatorManager.cpp:
+    (WebKit::AuthenticatorManager::authenticatorStatusUpdated):
+    * UIProcess/WebAuthentication/AuthenticatorManager.h:
+    * UIProcess/WebAuthentication/Cocoa/WebAuthenticationPanelClient.h:
+    * UIProcess/WebAuthentication/Cocoa/WebAuthenticationPanelClient.mm:
+    (WebKit::WebAuthenticationPanelClient::WebAuthenticationPanelClient):
+    (WebKit::wkWebAuthenticationPanelUpdate):
+    (WebKit::WebAuthenticationPanelClient::updatePanel const):
+    * UIProcess/WebAuthentication/WebAuthenticationFlags.h: Renamed from Source/WebKit/UIProcess/WebAuthentication/WebAuthenticationPanelFlags.h.
+    * UIProcess/WebAuthentication/WebAuthenticationRequestData.h:
+    * UIProcess/WebAuthentication/WebAuthenticatorCoordinatorProxy.cpp:
+    * UIProcess/WebAuthentication/fido/CtapAuthenticator.cpp:
+    (WebKit::CtapAuthenticator::continueGetAssertionAfterResponseReceived):
+    (WebKit::CtapAuthenticator::tryDowngrade):
+    * UIProcess/WebAuthentication/fido/U2fAuthenticator.cpp:
+    (WebKit::U2fAuthenticator::issueSignCommand):
+    * WebKit.xcodeproj/project.pbxproj:
+    
+    Tools:
+    
+    Adds new tests for _WKWebAuthenticationPanelUpdateNoCredentialsFound.
+    
+    * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
+    * TestWebKitAPI/Tests/WebKitCocoa/_WKWebAuthenticationPanel.mm:
+    (-[TestWebAuthenticationPanelDelegate panel:updateWebAuthenticationPanel:]):
+    (TestWebKitAPI::TEST):
+    * TestWebKitAPI/Tests/WebKitCocoa/web-authentication-get-assertion-hid-cancel.html:
+    * TestWebKitAPI/Tests/WebKitCocoa/web-authentication-get-assertion-hid-no-credentials.html: Added.
+    * TestWebKitAPI/Tests/WebKitCocoa/web-authentication-get-assertion-hid.html:
+    * TestWebKitAPI/Tests/WebKitCocoa/web-authentication-get-assertion-nfc.html:
+    * TestWebKitAPI/Tests/WebKitCocoa/web-authentication-get-assertion-u2f-no-credentials.html: Added.
+    
+    LayoutTests:
+    
+    Adds new tests for CtapAuthenticator::tryDowngrade enhancement.
+    
+    * http/wpt/webauthn/public-key-credential-get-failure-hid.https-expected.txt:
+    * http/wpt/webauthn/public-key-credential-get-failure-hid.https.html:
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251317 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-10-18  Jiewen Tan  <jiewen_tan@apple.com>
+
+            [WebAuthn] Warn users when no credentials are found
+            https://bugs.webkit.org/show_bug.cgi?id=203147
+            <rdar://problem/55931123>
+
+            Reviewed by Brent Fulgham.
+
+            Adds new tests for CtapAuthenticator::tryDowngrade enhancement.
+
+            * http/wpt/webauthn/public-key-credential-get-failure-hid.https-expected.txt:
+            * http/wpt/webauthn/public-key-credential-get-failure-hid.https.html:
+
+2019-10-29  Alan Coon  <alancoon@apple.com>
+
         Cherry-pick r251500. rdar://problem/56579657
 
     [WebAuthn] Warn users when multiple NFC tags present
