--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,54 @@
+2019-10-31  Alan Coon  <alancoon@apple.com>
+
+        Cherry-pick r251304. rdar://problem/56763315
+
+    [iOS] "Unexpectedly Resumed" process assertion may cause us to get terminated
+    https://bugs.webkit.org/show_bug.cgi?id=203046
+    <rdar://problem/56179592>
+    
+    Reviewed by Geoffrey Garen.
+    
+    This patch implements the following to avoid getting terminated:
+    1. Schedule the task to release the assertion on a background thread instead of
+       the main thread so that we end up releasing the task even if the main thread
+       is somehow hung.
+    2. Add an invalidation handler to the process assertion which releases the assertion
+       upon expiration.
+    
+    * UIProcess/Cocoa/WebProcessProxyCocoa.mm:
+    (WebKit::WebProcessProxy::processWasUnexpectedlyUnsuspended):
+    * WebProcess/WebProcess.cpp:
+    (WebKit::WebProcess::processDidResume):
+    * WebProcess/WebProcess.h:
+    * WebProcess/cocoa/WebProcessCocoa.mm:
+    (WebKit::WebProcess::processTaskStateDidChange):
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251304 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-10-18  Chris Dumez  <cdumez@apple.com>
+
+            [iOS] "Unexpectedly Resumed" process assertion may cause us to get terminated
+            https://bugs.webkit.org/show_bug.cgi?id=203046
+            <rdar://problem/56179592>
+
+            Reviewed by Geoffrey Garen.
+
+            This patch implements the following to avoid getting terminated:
+            1. Schedule the task to release the assertion on a background thread instead of
+               the main thread so that we end up releasing the task even if the main thread
+               is somehow hung.
+            2. Add an invalidation handler to the process assertion which releases the assertion
+               upon expiration.
+
+            * UIProcess/Cocoa/WebProcessProxyCocoa.mm:
+            (WebKit::WebProcessProxy::processWasUnexpectedlyUnsuspended):
+            * WebProcess/WebProcess.cpp:
+            (WebKit::WebProcess::processDidResume):
+            * WebProcess/WebProcess.h:
+            * WebProcess/cocoa/WebProcessCocoa.mm:
+            (WebKit::WebProcess::processTaskStateDidChange):
+
 2019-10-15  Alan Coon  <alancoon@apple.com>
 
         Cherry-pick r250773. rdar://problem/56271907
