--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,3 +1,42 @@
+2019-11-04  Alan Coon  <alancoon@apple.com>
+
+        Cherry-pick r251827. rdar://problem/56868427
+
+    Add fullscreen style quirk for reddit.com
+    https://bugs.webkit.org/show_bug.cgi?id=203635
+    <rdar://problem/55813774>
+    
+    Reviewed by Eric Carlson.
+    
+    Reddit.com expects the UA stylesheet to give the fullscreen element
+    a "width:100%; height:100%;" style.
+    
+    * css/CSSDefaultStyleSheets.cpp:
+    (WebCore::CSSDefaultStyleSheets::ensureDefaultStyleSheetsForElement):
+    * page/Quirks.cpp:
+    (WebCore::Quirks::needsFullWidthHeightFullscreenStyleQuirk const):
+    * page/Quirks.h:
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251827 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-10-30  Jer Noble  <jer.noble@apple.com>
+
+            Add fullscreen style quirk for reddit.com
+            https://bugs.webkit.org/show_bug.cgi?id=203635
+            <rdar://problem/55813774>
+
+            Reviewed by Eric Carlson.
+
+            Reddit.com expects the UA stylesheet to give the fullscreen element
+            a "width:100%; height:100%;" style.
+
+            * css/CSSDefaultStyleSheets.cpp:
+            (WebCore::CSSDefaultStyleSheets::ensureDefaultStyleSheetsForElement):
+            * page/Quirks.cpp:
+            (WebCore::Quirks::needsFullWidthHeightFullscreenStyleQuirk const):
+            * page/Quirks.h:
+
 2019-10-29  Alan Coon  <alancoon@apple.com>
 
         Cherry-pick r251500. rdar://problem/56579657
