--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,44 @@
+2019-11-04  Alan Coon  <alancoon@apple.com>
+
+        Cherry-pick r251979. rdar://problem/56864383
+
+    [WebAuthn] CtapAuthenticator::tryDowngrade should distinguish requestData().options
+    https://bugs.webkit.org/show_bug.cgi?id=203771
+    <rdar://problem/56832618>
+    
+    Reviewed by Brent Fulgham.
+    
+    CtapAuthenticator::tryDowngrade assumes the request is a getAssertion request. This is true
+    for most cases but not for Google's registration. For Google's registration, a quirk is
+    implemented to use U2F commands for registration if GoogleLegacyAppIdSupportExtension asks
+    us to do so.
+    
+    No tests given there is no way to simulate google.com in our test infrastructures.
+    
+    * UIProcess/WebAuthentication/fido/CtapAuthenticator.cpp:
+    (WebKit::CtapAuthenticator::tryDowngrade):
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251979 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-11-03  Jiewen Tan  <jiewen_tan@apple.com>
+
+            [WebAuthn] CtapAuthenticator::tryDowngrade should distinguish requestData().options
+            https://bugs.webkit.org/show_bug.cgi?id=203771
+            <rdar://problem/56832618>
+
+            Reviewed by Brent Fulgham.
+
+            CtapAuthenticator::tryDowngrade assumes the request is a getAssertion request. This is true
+            for most cases but not for Google's registration. For Google's registration, a quirk is
+            implemented to use U2F commands for registration if GoogleLegacyAppIdSupportExtension asks
+            us to do so.
+
+            No tests given there is no way to simulate google.com in our test infrastructures.
+
+            * UIProcess/WebAuthentication/fido/CtapAuthenticator.cpp:
+            (WebKit::CtapAuthenticator::tryDowngrade):
+
 2019-10-30  Alex Christensen  <achristensen@webkit.org>
 
         Branch build fix after r251754
