--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,25 @@
+2019-11-04  Alan Coon  <alancoon@apple.com>
+
+        Apply patch. rdar://problem/56864381
+
+    2019-11-04  Tim Horton  <timothy_horton@apple.com>
+
+            WKWebView can get stuck blank (Web Content process thinks the app is backgrounded)
+            https://bugs.webkit.org/show_bug.cgi?id=203774
+            <rdar://problem/53399054>
+
+            * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
+            * TestWebKitAPI/Tests/WebKitCocoa/WKPDFView.mm: Added.
+            (TEST):
+            (isBackground):
+            (createHostViewForExtensionIdentifier):
+            * TestWebKitAPI/Tests/WebKitCocoa/WKPDFViewResizeCrash.mm: Removed.
+            * TestWebKitAPI/Tests/WebKitCocoa/WKPDFViewStablePresentationUpdateCallback.mm: Removed.
+            * TestWebKitAPI/cocoa/TestNavigationDelegate.h:
+            * TestWebKitAPI/cocoa/TestNavigationDelegate.mm:
+            (-[WKWebView _test_waitForDidFinishNavigationWithoutPresentationUpdate]):
+            Merge existing WKPDFView tests into one file, and add one for this bug.
+
 2019-11-04  Kocsen Chung  <kocsen_chung@apple.com>
 
         Cherry-pick r248552. rdar://problem/56868427
