--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,3 +1,47 @@
+2019-11-04  Alan Coon  <alancoon@apple.com>
+
+        Cherry-pick r251957. rdar://problem/56887511
+
+    SVG pair properties must be detached from their owner before it's deleted
+    https://bugs.webkit.org/show_bug.cgi?id=203545
+    
+    Reviewed by Simon Fraser.
+    
+    Source/WebCore:
+    
+    SVGAnimatedPropertyPairAccessor needs to override its detach() method so
+    each of its pair properties detaches itself from the owner.
+    SVGPointerMemberAccessor does the same thing but for a single property
+    which covers all the list properties as well.
+    
+    Test: svg/custom/pair-properties-detach.html
+    
+    * svg/properties/SVGAnimatedPropertyPairAccessor.h:
+    
+    LayoutTests:
+    
+    * svg/custom/pair-properties-detach-expected.txt: Added.
+    * svg/custom/pair-properties-detach.html: Added.
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251957 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-11-01  Said Abou-Hallawa  <sabouhallawa@apple.com>
+
+            SVG pair properties must be detached from their owner before it's deleted
+            https://bugs.webkit.org/show_bug.cgi?id=203545
+
+            Reviewed by Simon Fraser.
+
+            SVGAnimatedPropertyPairAccessor needs to override its detach() method so
+            each of its pair properties detaches itself from the owner.
+            SVGPointerMemberAccessor does the same thing but for a single property
+            which covers all the list properties as well.
+
+            Test: svg/custom/pair-properties-detach.html
+
+            * svg/properties/SVGAnimatedPropertyPairAccessor.h:
+
 2019-11-04  Kocsen Chung  <kocsen_chung@apple.com>
 
         Cherry-pick r248552. rdar://problem/56868427
