--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,9 @@
+2019-11-06  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.26.2 release
+
+        * gtk/NEWS: Add release notes for 2.26.2.
+
 2019-10-22  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK] C++ comments used in C header files
