--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,9 @@
+2019-11-07  Adrian Perez de Castro  <aperez@igalia.com>
+
+        Unreviewed build fixed for non-unified builds.
+
+        * NetworkProcess/NetworkConnectionToWebProcess.cpp: Add missin inclusion of the Logging.h header
+
 2019-11-06  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         Unreviewed. Update OptionsGTK.cmake and NEWS for 2.26.2 release
