Cherry-pick r252619. rdar://problem/57330791
    IPC::Decoder should use nullptr as invalid value
    <https://webkit.org/b/203880>
    <rdar://problem/53159906>

    Reviewed by Brent Fulgham.

    Covered by existing tests.

    * Platform/IPC/Decoder.cpp:
    (IPC::alignedBufferIsLargeEnoughToContain): Add bufferStart
    parameter to add beginning bounds check now that m_bufferPos
    uses nullptr for an invalid value.
    (IPC::Decoder::alignBufferPosition): Update to pass m_buffer to
    IPC::alignedBufferIsLargeEnoughToContain().
    (IPC::Decoder::bufferIsLargeEnoughToContain const): Ditto.
    * Platform/IPC/Decoder.h:
    (IPC::Decoder::isInvalid const): Add beginning bounds check now
    that m_bufferPos uses nullptr for an invalid value.
    (IPC::Decoder::markInvalid): Make nullptr the invalid value for
    m_bufferPos.

    Canonical link: https://commits.webkit.org/217613@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252619 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213666.550@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@252657 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,53 @@
+2019-11-19  Alan Coon  <alancoon@apple.com>
+
+        Cherry-pick r252619. rdar://problem/57330791
+
+    IPC::Decoder should use nullptr as invalid value
+    <https://webkit.org/b/203880>
+    <rdar://problem/53159906>
+    
+    Reviewed by Brent Fulgham.
+    
+    Covered by existing tests.
+    
+    * Platform/IPC/Decoder.cpp:
+    (IPC::alignedBufferIsLargeEnoughToContain): Add bufferStart
+    parameter to add beginning bounds check now that m_bufferPos
+    uses nullptr for an invalid value.
+    (IPC::Decoder::alignBufferPosition): Update to pass m_buffer to
+    IPC::alignedBufferIsLargeEnoughToContain().
+    (IPC::Decoder::bufferIsLargeEnoughToContain const): Ditto.
+    * Platform/IPC/Decoder.h:
+    (IPC::Decoder::isInvalid const): Add beginning bounds check now
+    that m_bufferPos uses nullptr for an invalid value.
+    (IPC::Decoder::markInvalid): Make nullptr the invalid value for
+    m_bufferPos.
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252619 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-11-18  David Kilzer  <ddkilzer@apple.com>
+
+            IPC::Decoder should use nullptr as invalid value
+            <https://webkit.org/b/203880>
+            <rdar://problem/53159906>
+
+            Reviewed by Brent Fulgham.
+
+            Covered by existing tests.
+
+            * Platform/IPC/Decoder.cpp:
+            (IPC::alignedBufferIsLargeEnoughToContain): Add bufferStart
+            parameter to add beginning bounds check now that m_bufferPos
+            uses nullptr for an invalid value.
+            (IPC::Decoder::alignBufferPosition): Update to pass m_buffer to
+            IPC::alignedBufferIsLargeEnoughToContain().
+            (IPC::Decoder::bufferIsLargeEnoughToContain const): Ditto.
+            * Platform/IPC/Decoder.h:
+            (IPC::Decoder::isInvalid const): Add beginning bounds check now
+            that m_bufferPos uses nullptr for an invalid value.
+            (IPC::Decoder::markInvalid): Make nullptr the invalid value for
+            m_bufferPos.
+
 2019-11-18  Alan Coon  <alancoon@apple.com>
 
         Apply patch. rdar://problem/57283569
